src/test/ui/coercion/coerce-reborrow-multi-arg-fail.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-reborrow-multi-arg-fail.rs:4:18
   |
LL |     test(&mut 7, &7);
   |     ----         ^^ types differ in mutability
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut {integer}`
                      found reference `&{integer}`
note: function defined here
  --> $DIR/coerce-reborrow-multi-arg-fail.rs:1:4
   |
LL | fn test<T>(_a: T, _b: T) {}
   |    ^^^^           -----

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
